--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^3.6.3",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.0",
     "graphql": "^16.3.0",
-    "mongodb": "^4.4.1"
+    "mongodb": "^4.4.1",
+    "uuid": "^8.3.2"
   }
 }
