--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.0",
     "graphql": "^16.3.0",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.4.1",
     "uuid": "^8.3.2"
   }
