--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "apollo-server": "^3.6.3",
     "bcryptjs": "^2.4.3",
+    "bson-objectid": "^2.0.2",
     "dotenv": "^16.0.0",
     "graphql": "^16.3.0",
     "jsonwebtoken": "^8.5.1",
